Fixed images on safari for crowdfunding

--- a/client/scripts/views/pages/landing/chains_crowdfunding.scss
+++ b/client/scripts/views/pages/landing/chains_crowdfunding.scss
@@ -18,4 +18,8 @@ section.ChainsCrowdfunding {
       background: #FAFAFA;
     }
   }
+
+  .ChainsImage {
+    margin-top: -2.5rem;
+  }
 }
